; ModuleID = '/home/carl/AnghaBench/glfw/tests/extr_glfwinfo.c_get_api_name.c'
source_filename = "/home/carl/AnghaBench/glfw/tests/extr_glfwinfo.c_get_api_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GLFW_OPENGL_API = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"OpenGL\00", align 1
@GLFW_OPENGL_ES_API = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [10 x i8] c"OpenGL ES\00", align 1
@.str.2 = private unnamed_addr constant [12 x i8] c"Unknown API\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @get_api_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_api_name(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = load i32, i32* @GLFW_OPENGL_API, align 4
  %6 = icmp eq i32 %4, %5
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %15

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @GLFW_OPENGL_ES_API, align 4
  %11 = icmp eq i32 %9, %10
  br i1 %11, label %12, label %13

12:                                               ; preds = %8
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %15

13:                                               ; preds = %8
  br label %14

14:                                               ; preds = %13
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %15

15:                                               ; preds = %14, %12, %7
  %16 = load i8*, i8** %2, align 8
  ret i8* %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
